Basic Game implementations

--- a/package.json
+++ b/package.json
@@ -4,21 +4,11 @@
   "description": "RPG roquelite bullet hell like game project",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vitoroliveiracg/project-roguelite-game.git"
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/vitoroliveiracg/project-roguelite-game/issues"
-  },
-  "homepage": "https://github.com/vitoroliveiracg/project-roguelite-game#readme",
   "devDependencies": {
     "typescript": "^5.9.3",
     "vite": "^7.1.12"
