--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@webgpu/types": "^0.1.66",
     "typescript": "^5.9.3",
     "vite": "^7.1.12"
   }
