--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "module": "esnext",
     "target": "esnext",
     "lib": ["esnext", "dom", "dom.iterable"],
+    "types": [
+      "@webgpu/types"
+    ],
 
     // Other Outputs
     "sourceMap": true,
